ligolang/src/test/contracts/negative/polymorphism/annotate.mligo
let f (type a) (x : a) = x
